force-app/main/default/objects/DI_Management__c/DI_Management__c.object-meta.xml
<CustomObject>
    <description>NICC-015381 - Manage core peripheral DI&apos;s</description>
    <label>DI Management</label>
    <nameField>
        <displayFormat>DIM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DI Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>