force-app/main/default/objects/DI_Management__c/fields/Core_DI_Index__c.field-meta.xml
<CustomField>
    <fullName>Core_DI_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core DI Index</label>
    <referenceTo>NI_DeploymentInstanceIndex__c</referenceTo>
    <relationshipLabel>DI Management</relationshipLabel>
    <relationshipName>DI_Management</relationshipName>
    <type>Lookup</type>
</CustomField>