force-app/main/default/objects/DI_Management__c/fields/Peripheral_DI_Product__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_DI_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peripheral DI Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.DI_Index__c</field>
            <operation>notEqual</operation>
            <valueField>$Source.Core_DI_Index__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>DI Management</relationshipLabel>
    <relationshipName>DI_Management</relationshipName>
    <type>Lookup</type>
</CustomField>