force-app/main/default/objects/DI_Management__c/fields/Product_DI_Index__c.field-meta.xml
<CustomField>
    <fullName>Product_DI_Index__c</fullName>
    <formula>Peripheral_DI_Product__r.DI_Index__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product DI Index</label>
    <type>Text</type>
</CustomField>