force-app/main/default/objects/DI_Management__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>This object was originally created to manage the Core-Peripheral DI relationship.  This field was added to support future potential use of this object for the management of other DI related needs.</description>
    <inlineHelpText>Core-Peripheral: Always create a Peripheral DI
Franchisor: Only create a Peripheral DI on Accounts associated to the specified Franchisor</inlineHelpText>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core-Peripheral</fullName>
                <default>true</default>
                <label>Core-Peripheral</label>
            </value>
            <value>
                <fullName>Franchisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>