force-app/main/default/objects/DI_Management__c/fields/Unique_Record__c.field-meta.xml
<CustomField>
    <fullName>Unique_Record__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique DI Index ProductID Relationship</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>