force-app/main/default/objects/DI_Management__c/fields/UniqueCoreDiDiIndex__c.field-meta.xml
<CustomField>
    <fullName>UniqueCoreDiDiIndex__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique CoreDi &amp; Product DI-Index</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>