force-app/main/default/objects/DI_Management__c/validationRules/Franchisor_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Franchisor_Validation</fullName>
    <active>true</active>
    <description>If relationship is selected as franchisor, Franchisor name should be provided</description>
    <errorConditionFormula>IF( AND(TEXT(Relationship__c) = &apos;Franchisor&apos; ,ISBLANK(Franchisor__c ))   , true, false)</errorConditionFormula>
    <errorDisplayField>Franchisor__c</errorDisplayField>
    <errorMessage>You must enter a Franchisor for a Franchisor Relationship.</errorMessage>
</ValidationRule>