force-app/main/default/objects/DI_Management__c/validationRules/PeripheralProduct_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PeripheralProduct_Validation</fullName>
    <active>true</active>
    <description>Peripheral DI Product field should not be empty</description>
    <errorConditionFormula>IF( ISBLANK(Peripheral_DI_Product__c ) , true, false)</errorConditionFormula>
    <errorDisplayField>Peripheral_DI_Product__c</errorDisplayField>
    <errorMessage>Please select a Peripheral DI Product.</errorMessage>
</ValidationRule>