force-app/main/default/objects/DI_Management__c/validationRules/Relationship_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Relationship_Validation</fullName>
    <active>true</active>
    <description>Relationship field should not be empty</description>
    <errorConditionFormula>IF(TEXT(Relationship__c) == &apos;&apos;, true, false)</errorConditionFormula>
    <errorDisplayField>Relationship__c</errorDisplayField>
    <errorMessage>Please select a Relationship.</errorMessage>
</ValidationRule>